--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<meta http-equiv="Refresh" Content="10; ./welcome.html">
+<!--meta http-equiv="Refresh" Content="10; ./welcome.html"-->
 
-<title>The ZhiSheng's Website</title>
+<title>The liulibo's Website</title>
 <style type="text/css">
-    canvas {display: block;}
+    /*canvas {display: block;}
 	html
 	{
 	background:black;
@@ -17,13 +17,14 @@
 	height:100%;
 	width:100%;
 	overflow:hidden;
-	}
+	}*/
 </style>
 </head>
 <body>
+<h1>hello world！</h1>
   <canvas id="c">
   <script type="text/javascript">
-		window.onload=function()
+		/*window.onload=function()
 		{
 			var c = document.getElementById("c");
 			var ctx = c.getContext("2d");
@@ -71,7 +72,7 @@
 				}
 			}
 			setInterval(draw, 50);
-		}
+		}*/
 </script>
 </body>
 </html>
