--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </style>
 </head>
 <body>
-<h1>hello world！</h1>
+<h1>hello world！杨沛</h1>
   <canvas id="c">
   <script type="text/javascript">
 		/*window.onload=function()
