--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 </style>
 </head>
 <body>
-<h1>hello world！杨沛</h1>
+<!--h1>hello world！</h1-->
   <canvas id="c">
   <script type="text/javascript">
-		/*window.onload=function()
+		window.onload=function()
 		{
 			var c = document.getElementById("c");
 			var ctx = c.getContext("2d");
@@ -72,7 +72,7 @@
 				}
 			}
 			setInterval(draw, 50);
-		}*/
+		}
 </script>
 </body>
 </html>
