--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <title>The liulibo's Website</title>
 <style type="text/css">
-    /*canvas {display: block;}
+    canvas {display: block;}
 	html
 	{
 	background:black;
@@ -17,7 +17,7 @@
 	height:100%;
 	width:100%;
 	overflow:hidden;
-	}*/
+	}
 </style>
 </head>
 <body>
