--- a/index.html
+++ b/index.html
@@ -74,5 +74,6 @@
 			setInterval(draw, 50);
 		}
 </script>
+<script type='text/javascript' src='http://webchat.7moor.com/javascripts/7moorInit.js?accessId=6636bc40-0311-11e7-bfba-c5f2f47e8409&autoShow=true' async='async'></script>
 </body>
 </html>
