--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
 </script>
 	  
 <script type='text/javascript' src='http://webchat.7moor.com/javascripts/7moorInit.js?accessId=6636bc40-0311-11e7-bfba-c5f2f47e8409&autoShow=false' async='async'></script>
-<li><a onclick=“qimoChatClick(); target="_blank"><span class="fa fa-thumbs-o-up"></span>咨询</a></LI>
+<li><a onclick=“qimoChatClick(); target="_blank">咨询</a></li>
 	  </body>
 </html>
