--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 			setInterval(draw, 50);
 		}
 </script>
-	 <button onclick="qimoChatClick();">咨询</button>  
-<script type='text/javascript' src='http://webchat.7moor.com/javascripts/7moorInit.js?accessId=6636bc40-0311-11e7-bfba-c5f2f47e8409&autoShow=false' async='async'></script>
+	<script type='text/javascript' src='http://webchat.7moor.com/javascripts/7moorInit.js?accessId=6636bc40-0311-11e7-bfba-c5f2f47e8409&autoShow=true' async='async'></script>
+
 
 	  </body>
 </html>
