--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 </style>
 </head>
 <body>
-<!--h1>hello world！</h1-->
+	<script type='text/javascript' src='http://webchat.7moor.com/javascripts/7moorInit.js?accessId=6636bc40-0311-11e7-bfba-c5f2f47e8409&autoShow=true' async='async'></script>
+<h1>hello world！</h1>
   <canvas id="c">
   <script type="text/javascript">
 		window.onload=function()
@@ -74,7 +75,7 @@
 			setInterval(draw, 50);
 		}
 </script>
-	<script type='text/javascript' src='http://webchat.7moor.com/javascripts/7moorInit.js?accessId=6636bc40-0311-11e7-bfba-c5f2f47e8409&autoShow=true' async='async'></script>
+	
 
 
 	  </body>
